<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bio_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textIsSelectable="true"
        android:hint="QuestionView"
        tools:ignore="HardcodedText"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">
        android:orientation="vertical">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TRUE"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat_button"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SKIP"
            tools:ignore="ButtonStyle,HardcodedText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/q1_button"
            tools:text="Q1"
            android:text="Q1"
            tools:ignore="ButtonStyle,HardcodedText"/>

        <Button
            android:text="Q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/q2_button"
            tools:ignore="ButtonStyle,HardcodedText"/>

        <Button
            android:text="Q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/q3_button"
            tools:ignore="ButtonStyle,HardcodedText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">
        android:orientation="vertical">

        <Button
            android:text="Q4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/q4_button"
            tools:ignore="ButtonStyle,HardcodedText"/>

        <Button
            android:text="Q5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/q5_button"
            tools:ignore="ButtonStyle,HardcodedText"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvFinalScore"
        android:hint="@string/finalscore"/>

    <Button
        android:text="@string/save_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fSave_button"/>

    <Button
        android:text="SHOW SCORE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showscore_button"
        tools:ignore="HardcodedText"/>

    <Button
        android:text="PASS TO PLAYER 2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/multiplayer_button"
        tools:ignore="HardcodedText"/>

</LinearLayout>
